Changes in Shorewall 4.4.20 Beta 4

1)  Smarten up the tc devnum algorithm.

2)  Implement LEGACY_FASTSTART option.

Changes in Shorewall 4.4.20 Beta 3

1)  Add auditing support.

Changes in Shorewall 4.4.20 Beta 2

1)  Use 'my' for module globals unless variable is exported.

2)  Merged fixes from 4.4.19.4.

3)  Implemented ACCOUNTING_TABLE

4)  Implemented NFLOG accounting action.

5)  Implement 'whitelist' option.

Changes in Shorewall 4.4.20 Beta 1

1)  Apply Togan's patch for installation flexibility.

2)  Disallow degenerate entry in tcpri.

3)  More fixes to LIBEXEC/TCPRI

4)  Don't allow filters and tcrules to refer to non-leaf classes.

Changes in Shorewall 4.4.19.2

1)  Restore the ability to have IPSET names in the ORIGINAL DEST column
    of a DNAT or REDIRECT rule.

2)  Correct several complex TC issues reported by Mr Dash4.

3)  Detect double exclusion involving ipset expressions.

Changes in Shorewall 4.4.19.1

1)  Eliminate silly duplicate rule when stopped.

2)  Don't believe that all nexthop routes are default routes.

3)  Restore :<low port>-<high port> in masq file.

4)  Correct default route safe/restore.

Changes in Shorewall 4.4.19.1

1)  Eliminate silly duplicate rule when stopped.

2)  Don't believe that all nexthop routes are default routes.

3)  Restore :<low port>-<high port> in masq file.

4)  Correct default route safe/restore.

5)  Restore ability to use an IPSET in the ORIGINAL DEST column of 
    DNAT and REDIRECT rules.

Changes in Shorewall 4.4.19 Final

1)  Update release documents.

2)  Correct split_line() error message for the proxyndp line.

Changes in Shorewall 4.4.19 RC 1

1)  Correct release notes.

2)  Display mangle table in the output from 'shorewall show tc'.

3)  Allow simple TC to work on both IPv4 and IPv6

4)  Fix an optimizer bug in Shorewall::Chains::replace_references().

5)  Correct missing jump to 'dnat'.

Changes in Shorewall 4.4.19 Beta 5

1)  Fix logical naming and bridge.
