@@ -724,6 +724,10 @@ restart_command() {
 			    g_fast=Yes
 			    option=${option#f}
 			    ;;
+			c*)
+			    AUTOMAKE=
+			    option=${option#c}
+			    ;;			    
 			n*)
 			    g_noroutes=Yes
 			    option=${option#n}
@@ -1385,7 +1389,7 @@ usage() # $1 = exit status
     echo "   reject <address> ..."
     echo "   reload [ -s ] [ -c ] [ -r <root user> ] [ <directory> ] <system>"
     echo "   reset [ <chain> ... ]"
-    echo "   restart [ -n ] [ -p ] [ -f ] [ <directory> ]"
+    echo "   restart [ -n ] [ -p ] [-d] [ -f ] [ -c ][ <directory> ]"
     echo "   restore [ -n ] [ <file name> ]"
     echo "   save [ <file name> ]"
     echo "   show [ -x ] [ -t {filter|mangle|nat} ] [ {chain [<chain> [ <chain> ... ]"
