@@ -147,6 +147,14 @@ VI.   PROBLEMS CORRECTED AND NEW FEATURES IN PRIOR RELEASES
     LEGACY_FASTSTART=No, 'start -f' and 'restart -f' compare with
     /var/lib/shorewall[6]/firewall.
 
+7)  A '-c' (compile) option has been added to the 'restart'
+    command in both Shorewall and Shorewall6. It overrides the setting
+    of AUTOMAKE and unconditionally forces a recompilation of the
+    configuration.
+
+    When both -c and -f are specified, the result is determined by the
+    option that appears last.
+
 ----------------------------------------------------------------------------
              I V.  R E L E A S E  4 . 4  H I G H L I G H T S
 ----------------------------------------------------------------------------
