@@ -4,6 +4,8 @@ Changes in Shorewall 4.4.20 Beta 4
 
 2)  Implement LEGACY_FASTSTART option.
 
+3)  Add a '-c' option to the restart command.
+
 Changes in Shorewall 4.4.20 Beta 3
 
 1)  Add auditing support.
